
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-2023] Added sanity checks for settings caches in setup, ensure settings caches are removed post-setup
- [#MODX-2064] Ensure Action combos in System Actions page are reloaded when an action is updated/created/removed
- Fixed invalid validation rule on element classes
- [#MODX-2091] Ensure duplicate maintains published status
- [#MODX-2123] Added workaround for IE with Quick Update Resource window
- Modified validation on modChunk, modPlugin, modSnippet, and modTemplateVar to allow spaces within a name
- [#MODX-2052] Fixed bug with loading multiple MODx.Browser instances in non-file management circumstances
- Updated duplicate processors to check validation, return more informative messages, sanity checks
- Removed duplicate days keys in lexicon
- Fixed issues when TV render directories are overridden
- [#MODX-2115] Fixed issue with phpthumb reference and capitalization, and when base_url is /
- [#MODX-2113] Fixed CTRL+SHIFT+H shortcut for hiding left nav
- Fixed bug in ORM tree relating to adding root nodes when subnode was selected
- Added ability to add/remove attributes and containers to UI ORM trees, specifically in User extended and remote data
- Added UI for editing extended User Profile data
- [#MODX-2116] Fixed bug in depth search in modX::sanitize
- [#MODX-1150] Changing class_key for a Resource now reloads the page to change editing area
- [#MODX-2077] Config check screen in welcome panel now is same width as other panels
- [#MODX-1648] Lexicon Management now loads by default the current manager_language
- [#MODX-1743] Package update now shows status alert when package is already up to date, rather than an error