@@ -14,7 +14,7 @@ $_lang['filter_clear'] = 'Filter zurücksetzen';
 $_lang['manager_log'] = 'Manager-Log';
 $_lang['mgrlog_clear'] = 'Manager-Protokoll leeren';
 $_lang['mgrlog_clear_confirm'] = 'Sind Sie sicher, dass Sie das Manager-Protokoll komplett leeren möchten? Dies kann nicht rückgängig gemacht werden.';
-$_lang['mgrlog_query_msg'] = 'Bitte nehmen Sie eine Auswahl für die Einsichtnahme in die Logs vor. Sie können Log-Einträge nach dem Datum auswählen, aber beachten Sie bitte, dass das von Ihnen eingegebene Enddatum nicht inklusive ist - um jeden Log-Eintrag für den 01.01.2010 auszuwählen, setzen Sie das Startdatum auf den 01.01.2010 und das Enddatum auf den 02.01.2010.<br /><br />';
+$_lang['mgrlog_query_msg'] = 'Bitte nehmen Sie eine Auswahl für die Einsichtnahme in die Logs vor. Sie können Log-Einträge nach dem Datum auswählen, aber beachten Sie bitte, dass das von Ihnen eingegebene Enddatum nicht inklusive ist - um jeden Log-Eintrag für den 01.01.2010 auszuwählen, setzen Sie das Startdatum auf den 01.01.2010 und das Enddatum auf den 02.01.2010.';
 $_lang['mgrlog_query'] = 'Log abfragen';
 $_lang['mgrlog_view'] = 'Manager-Logs ansehen';
 $_lang['occurred'] = 'Aufgetreten';
