@@ -13,7 +13,7 @@ $_lang['filter_clear'] = 'Clear Filter';
 $_lang['manager_log'] = 'Manager Log';
 $_lang['mgrlog_clear'] = 'Empty Manager Log';
 $_lang['mgrlog_clear_confirm'] = 'Are you sure you want to completely empty the manager log? This cannot be undone.';
-$_lang['mgrlog_query_msg'] = 'Please make a selection for viewing the logs. You can select log entries by date, but be aware that the dates you enter are not inclusive - to select every log entry for 01-01-2004, set \'date start\' to 01-01-2004 and \'date end\' to 02-01-2004.<br /><br />.';
+$_lang['mgrlog_query_msg'] = 'Please make a selection for viewing the logs. You can select log entries by date, but be aware that the dates you enter are not inclusive - to select every log entry for 01-01-2004, set \'date start\' to 01-01-2004 and \'date end\' to 02-01-2004.';
 $_lang['mgrlog_query'] = 'Query logging';
 $_lang['mgrlog_view'] = 'View manager logs';
 $_lang['occurred'] = 'Occurred';
