@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-2125] Various fixes for manager log page
 - [#MODX-2023] Added sanity checks for settings caches in setup, ensure settings caches are removed post-setup
 - [#MODX-2064] Ensure Action combos in System Actions page are reloaded when an action is updated/created/removed
 - Fixed invalid validation rule on element classes
